2008-03-28  Jonathan Pobst  <monkey@jpobst.com>

	* ComboBox.cs: Adjust selectedindex if we insert a new item
	above the current selectedindex in a sorted ComboBox.
	[Fixes bug #374654]

2008-03-28  Jonathan Pobst  <monkey@jpobst.com>

	* ComboBox.cs: Support PageUp/PageDown when dropdown is closed.
	[Fixes bug #374712]

2008-03-28  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridViewTextBoxCell.cs: Implement stuffs.

2008-03-27  Jonathan Pobst  <monkey@jpobst.com>

	* TreeView.cs: Create the scrollbars even earlier to be
	double dog certain they are created before they are accessed.

2008-03-27  Jonathan Pobst  <monkey@jpobst.com>

	* XplatUIX11.cs: Remove a no-op line that csc was choking on.

2008-03-27  Jonathan Pobst  <monkey@jpobst.com>

	* ScrollBar.cs: Create an internal safe Value setter so we
	won't crash if we try to set a value outside the min and max.
	* TextBoxBase.cs: Use safe value setter to guard against a
	potential NRE that is being reported by Reflector.

2008-03-27  Jonathan Pobst  <monkey@jpobst.com>

	* TreeView.cs: Create the scrollbars earlier in the constructor
	to attempt to guard against an NRE in SetTop in Reflector.

2008-03-27  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridView.cs, DataGridViewCell.cs, DataGridViewCell.cs,
	DataGridViewRowCollection.cs: Do not scroll column and row headers,
	show messagebox on data format error, use column display index
	correctly, make sure HitTest supports new layout stuff,
	make sure scrollbars support new layout stuff.

2008-03-27  Atsushi Enomoto  <atsushi@ximian.com>

	* XplatUIX11.cs : Patch by Doug Rintoul.
	  For some IM engines, keypress events need to delay call
	  to XPending() and XNextEvent() in the loop so that it
	  does not mess the orders in XIM commit callback.
	  Some KeyRelease events such as shift keys need to be
	  processed both in the IM engine and winforms driver
	  itself since winforms holds its own state check.
